datasource プロジェクトの追加

--- a/workspace/tsconfig.json
+++ b/workspace/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "core/*": [
         "dist/core/*"
+      ],
+      "datasource": [
+        "dist/datasource"
+      ],
+      "datasource/*": [
+        "dist/datasource/*"
       ]
     }
   },
