--- a/workspace/angular.json
+++ b/workspace/angular.json
@@ -28,7 +28,42 @@
           }
         }
       }
+    },
+    "datasource": {
+      "projectType": "library",
+      "root": "projects/datasource",
+      "sourceRoot": "projects/datasource/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/datasource/tsconfig.lib.json",
+            "project": "projects/datasource/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/datasource/src/test.ts",
+            "tsConfig": "projects/datasource/tsconfig.spec.json",
+            "karmaConfig": "projects/datasource/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/datasource/tsconfig.lib.json",
+              "projects/datasource/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
-  "defaultProject": "core"
+  "defaultProject": "datasource"
 }
