--- a/workspace/.gitignore
+++ b/workspace/.gitignore
@@ -36,6 +36,30 @@ testem.log
 
 
 
+#############################
+### Auto Created(Ionic) ###
+#############################
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
+*.sw[mnpcod]
+.tmp
+*.tmp
+*.tmp.*
+*.sublime-project
+UserInterfaceState.xcuserstate
+
+log.txt
+
+/.ionic
+/.sourcemaps
+/.versions
+/.vscode
+/platforms
+/plugins
+/www
+
+
+
 #################
 ### JetBrains ###
 #################
@@ -310,3 +334,4 @@ $RECYCLE.BIN/
 #####################
 ### Projects Rule ###
 #####################
+!/projects/**/assets/icon/
