--- a/workspace/package.json
+++ b/workspace/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
@@ -19,32 +18,42 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
-    "rxjs": "~6.4.0",
+    "@ionic-native/core": "^5.14.0",
+    "@ionic-native/splash-screen": "^5.14.0",
+    "@ionic-native/status-bar": "^5.14.0",
+    "@ionic/angular": "^4.10.0",
+    "core-js": "^3.2.1",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "~0.803.6",
     "@angular-devkit/build-angular": "~0.803.6",
     "@angular-devkit/build-ng-packagr": "~0.803.6",
+    "@angular-devkit/core": "~8.3.6",
+    "@angular-devkit/schematics": "~8.3.6",
     "@angular/cli": "~8.3.6",
+    "@angular/compiler": "~8.2.8",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@ionic/angular-toolkit": "~2.0.0",
+    "@types/jasmine": "~3.4.1",
+    "@types/jasminewd2": "~2.0.7",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^5.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.5.1",
+    "protractor": "~5.4.2",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
-    "tslint": "~5.15.0",
+    "tslint": "~5.20.0",
     "typescript": "~3.5.3"
   }
 }
