--- a/workspace/package.json
+++ b/workspace/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@capacitor/android": "^1.2.1",
+    "@capacitor/core": "^1.2.1",
+    "@capacitor/electron": "^1.2.1",
+    "@capacitor/ios": "^1.2.1",
     "@ionic-native/core": "^5.14.0",
     "@ionic-native/splash-screen": "^5.14.0",
     "@ionic-native/status-bar": "^5.14.0",
@@ -37,6 +41,7 @@
     "@angular/compiler": "~8.2.8",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@capacitor/cli": "^1.2.1",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.4.1",
     "@types/jasminewd2": "~2.0.7",
