Capacitor 周りのブラッシュアップ

--- a/workspace/ionic.config.json
+++ b/workspace/ionic.config.json
@@ -3,7 +3,9 @@
     "projects": {
         "main": {
             "name": "main",
-            "integrations": {},
+            "integrations": {
+                "capacitor": {}
+            },
             "type": "angular",
             "root": "projects/main"
         }
