--- a/workspace/package.json
+++ b/workspace/package.json
@@ -24,6 +24,7 @@
     "@capacitor/ios": "^1.2.1",
     "@ionic-native/core": "^5.14.0",
     "@ionic/angular": "^4.10.0",
+    "@ionic/pwa-elements": "^1.4.1",
     "core-js": "^3.2.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
