--- a/workspace/package.json
+++ b/workspace/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.10.0",
     "@ionic/pwa-elements": "^1.4.1",
     "core-js": "^3.2.1",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
