--- a/workspace/projects/datasource/package.json
+++ b/workspace/projects/datasource/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^8.2.8",
-    "@angular/core": "^8.2.8"
+    "@angular/core": "^8.2.8",
+    "moment": "^2.24.0",
+    "rxjs": "~6.5.3"
   }
 }
