--- a/workspace/projects/datasource/package.json
+++ b/workspace/projects/datasource/package.json
@@ -4,6 +4,7 @@
   "peerDependencies": {
     "@angular/common": "^8.2.8",
     "@angular/core": "^8.2.8",
+    "@capacitor/core": "^1.2.1",
     "moment": "^2.24.0",
     "rxjs": "~6.5.3"
   }
